# hex-chess

./: .gitignore  BUILD_FIX.md  CAPTURE_FIX_SUMMARY.md  CHANGES_SUMMARY.md  Cargo.toml  LATEST_CHANGES.md  README.md  SETUP.md  Trunk.toml  build.sh  flake.nix
.cargo/: config.toml
.github/workflows/: pages-preview.yml  pages.yml
crates/core/: Cargo.toml
crates/core/src/: board.rs  coords.rs  game.rs  lib.rs  pieces.rs  variants.rs
crates/game/: Cargo.toml  index.html
crates/game/src/: lib.rs
crates/signaling/: Cargo.toml
crates/signaling/src/: main.rs
deploy/nixos/: configuration.nix  hex-chess.nix
web/: index.html  styles.css
