[workspace]
members = ["crates/core", "crates/game", "crates/signaling"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
bevy = { version = "0.14", features = ["default"] }
matchbox_socket = "0.8"
wasm-bindgen = "0.2"
web-sys = "0.3"
